--- a/home.css
+++ b/home.css
@@ -1,15 +1,101 @@
+/* Style the top banner */
+#Title {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  background-color: #2a2d31;
+  color: rgb(255, 255, 255); 
+  padding: 20px 30px;
+  font-size: 25px;
+  font-family: 'Quicksand', sans-serif;
+}
+
 body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background-image: url('https://eedzi.github.io/Edz-personal-website/Images/Background Control.gif');/* Path to GIF */
-            background-size: cover; /* GIF cover the entire background */
-            background-position: center; /* CentersGIF */
-            background-repeat: repeat; /* GIF  repeating */
-            background-attachment: fixed; /* Keeps the background fixed on scroll */
-        }
-        h1 {
-            color: white;
-            text-align: center;
-            padding-top: 200px;
-        }
+  font-family: 'Quicksand', sans-serif;
+  font-size: 18px;
+  margin: 0;
+  color: rgb(39, 39, 39);
+}
+
+.main-container {
+  display: flex;
+  gap: 15px;
+  padding: 9px 25px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  max-width:100%;
+}
+
+.left-column {
+  flex: 0.6;
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+  padding: 25px;
+  background-color: #23498d;
+  color: rgb(255, 255, 255);
+  font-family: 'Quicksand';
+  border-radius: 10px;
+}
+
+.right-column {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding-left: 25px;
+  border-radius: 10px;
+  background-color: #ebebeb;
+  color: rgb(0, 0, 0);
+}
+
+#Contact ul, #Skills ul {
+  list-style-type: disc;
+  padding-left: 20px;
+  margin: 0;
+}
+
+#Languages, #Personal, #Education, #Experience, #Reference {
+  padding-top: 10px;
+  padding-right: 25px;
+}
+
+h2, h3 {
+  margin-bottom: 10px;
+  padding: 5px 0;
+  font-family: 'Quicksand', sans-serif;
+}
+
+h2{
+  text-decoration: underline;
+}
+
+h3 {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+a {
+  color: #ff1818; /* Default link color */
+  text-decoration: none; /* Remove underline if desired */
+}
+
+.grades-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Two columns */
+  gap: 0px; 
+  padding: 25px;
+  list-style-type: circle;
+}
+
+#Footer {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  background-color: #2a2d31;
+  color: rgb(255, 255, 255); 
+  padding: 20px 40px;
+  font-size: 15px;
+  height: 20px;
+  font-family: 'Quicksand', sans-serif;
+}
